compilateurMinCaml/tests/syntax/valid/fneg.ml
print_int (int_of_float (-.(2.6)))