compilateurMinCaml/tests/syntax/invalid/bool.ml
print_int (true then 101 else 2)